--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,12 @@
 title: Kevin Chaplin
 email: kevinchaplin58@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The life and work of Kevin Chaplin.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://oboekevin.github.io" # the base hostname & protocol for your site
 twitter_username: kchappers58
 github_username:  oboekevin
+instagram_username: kchappers58
 
 # Build settings
 markdown: kramdown
