--- a/_config.yml
+++ b/_config.yml
@@ -18,5 +18,7 @@ instagram_username: kchappers58
 
 # Build settings
 markdown: kramdown
+# Added 9-19-17
+include: ["_pages"]
 
-theme: jekyll-theme-slate
+# theme: jekyll-theme-slate
